--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
     "postcss-cli": "^6.1.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "sanitize.css": "^8.0.0"
   }
 }
