HBS -> html-include
Signed-off-by: Jan Blasko <honza@lucien144.net>

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "concurrently 'npm run html:serve' 'npm run html:watch' 'npm run styles:watch' 'npm run images:watch'",
     "build": "concurrently 'npm run html:build' 'npm run styles:build' 'npm run images:build'",
-    "html": "hbs ./src/html/**/*.hbs --output ./build",
-    "html:build": "hbs ./src/html/**/*.hbs --output ./dist",
+    "html": "html-includes --src ./src/html --dest ./build",
+    "html:build": "html-includes --src ./src/html --dest ./dist",
     "html:serve": "browser-sync build -w --no-open",
-    "html:watch": "chokidar ./src/html/**/*.hbs --command 'npm run html'",
+    "html:watch": "chokidar ./src/html/**/*.html --command 'npm run html'",
     "styles": "node-sass ./src/styles --output ./build",
     "styles:watch": "npm run styles -- --watch",
     "styles:build": "npm run styles && postcss --use autoprefixer -b 'last 2 versions' < ./build/default.css | postcss --use cssnano > dist/default.min.css",
@@ -25,7 +25,7 @@
     "chokidar-cli": "^1.2.2",
     "concurrently": "^4.1.0",
     "cssnano": "^4.1.10",
-    "hbs-cli": "^1.3.0",
+    "html-includes": "^4.0.1",
     "imagemin-cli": "^4.0.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
