--- a/package.json
+++ b/package.json
@@ -29,10 +29,48 @@
     "imagemin-cli": "^4.0.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
-    "postcss-cli": "^6.1.2"
+    "postcss-cli": "^6.1.2",
+    "stylelint-config-standard": "^18.2.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
     "destyle.css": "^1.0.5"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard",
+    "rules": {
+      "indentation": "tab",
+      "string-quotes": "single",
+      "no-duplicate-selectors": true,
+      "color-hex-case": "lower",
+      "color-hex-length": "short",
+      "color-named": "always-where-possible",
+      "selector-no-qualifying-type": true,
+      "selector-combinator-space-after": "always",
+      "selector-attribute-quotes": "always",
+      "selector-attribute-operator-space-before": "never",
+      "selector-attribute-operator-space-after": "never",
+      "selector-attribute-brackets-space-inside": "never",
+      "declaration-block-trailing-semicolon": "always",
+      "declaration-no-important": true,
+      "declaration-colon-space-before": "never",
+      "declaration-colon-space-after": "always",
+      "property-no-vendor-prefix": true,
+      "value-no-vendor-prefix": true,
+      "number-leading-zero": "never",
+      "function-url-quotes": "never",
+      "font-family-name-quotes": "always-unless-keyword",
+      "comment-whitespace-inside": "always",
+      "at-rule-no-vendor-prefix": true,
+      "selector-pseudo-element-colon-notation": "single",
+      "selector-pseudo-class-parentheses-space-inside": "never",
+      "selector-no-vendor-prefix": true,
+      "media-feature-range-operator-space-before": "always",
+      "media-feature-range-operator-space-after": "always",
+      "media-feature-parentheses-space-inside": "never",
+      "media-feature-name-no-vendor-prefix": true,
+      "media-feature-colon-space-before": "never",
+      "media-feature-colon-space-after": "always"
+    }
   }
 }
