--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
       "color-hex-case": "lower",
       "color-hex-length": "short",
       "color-named": "always-where-possible",
-      "selector-no-qualifying-type": true,
+      "selector-no-qualifying-type": [true, {
+        "ignore": ["attribute"]
+      }],
       "selector-combinator-space-after": "always",
       "selector-attribute-quotes": "always",
       "selector-attribute-operator-space-before": "never",
