Build default.scss only
Signed-off-by: Jan Blasko <honza@lucien144.net>

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "html:build": "html-includes --src ./src/html --dest ./dist",
     "html:serve": "browser-sync build -w --no-open",
     "html:watch": "chokidar ./src/html/**/*.html --command 'npm run html'",
-    "styles": "node-sass ./src/styles --output ./build",
-    "styles:watch": "npm run styles -- --watch",
+    "styles": "node-sass ./src/styles/default.scss --output ./build",
+    "styles:watch": "chokidar ./src/styles/**/* --command 'npm run styles'",
     "styles:build": "npm run styles && postcss --use autoprefixer -b 'last 2 versions' < ./build/default.css | postcss --use cssnano > dist/default.min.css",
     "images": "imagemin ./src/images/**/* --out-dir=./build/images/",
     "images:build": "imagemin ./src/images/**/* --out-dir=./dist/images/",
