--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "Personal frontend dev-stack based on NPM (and not Gulp/Grunt).",
   "private": true,
   "scripts": {
-    "dev": "concurrently 'npm run html:serve' 'npm run html:watch' 'npm run styles:watch' 'npm run images:watch'",
-    "build": "npm run cleanup && concurrently 'npm run html:build' 'npm run styles:build' 'npm run images:build'",
-    "cleanup": "rimraf ./dist",
-    "html": "html-includes --src ./src/html --dest ./build",
-    "html:build": "html-includes --src ./src/html --dest ./dist",
-    "html:serve": "browser-sync build -w --no-open",
-    "html:watch": "chokidar ./src/html/**/*.html --command 'npm run html'",
-    "styles": "node-sass ./src/styles/default.scss --output ./build",
-    "styles:watch": "chokidar ./src/styles/**/* --command 'npm run styles'",
-    "styles:build": "npm run styles && postcss --use autoprefixer -b 'last 2 versions' < ./build/default.css | postcss --use cssnano > dist/default.min.css",
-    "images": "imagemin ./src/images/**/* --out-dir=./build/images/",
-    "images:build": "imagemin ./src/images/**/* --out-dir=./dist/images/",
-    "images:watch": "chokidar ./src/images/**/* --command 'npm run images && browser-sync reload'"
+    "dev": "concurrently 'npm run html:serve' 'npm run html:watch' 'npm run styles:watch'",
+    "build": "concurrently 'npm run styles:build'",
+    "html": "hbs ./src/html/**/*.hbs --output ./build",
+    "html:serve": "browser-sync build -w",
+    "html:watch": "chokidar ./src/html/**/*.hbs --command 'npm run html'",
+    "styles": "sass ./src/styles ./build",
+    "styles:watch": "npm run styles -- --watch",
+    "styles:build": "npm run styles && postcss --use autoprefixer -b 'last 2 versions' < ./build/default.css | postcss --use cssnano > dist/default.min.css"
   },
   "author": "Jan Blasko <honza@lucien144.net>",
   "license": "MIT",
@@ -26,65 +21,9 @@
     "chokidar-cli": "^1.2.2",
     "concurrently": "^4.1.0",
     "cssnano": "^4.1.10",
-    "html-includes": "^4.0.1",
-    "imagemin-cli": "^4.0.0",
-    "node-sass": "^4.11.0",
+    "hbs-cli": "^1.3.0",
     "postcss": "^7.0.14",
     "postcss-cli": "^6.1.2",
-    "rimraf": "^2.6.3",
-    "stylelint-config-standard": "^18.2.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "destyle.css": "^1.0.5"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "useTabs": true,
-    "semi": true,
-    "tabWidth": 4
-  },
-  "stylelint": {
-    "extends": "stylelint-config-standard",
-    "rules": {
-      "indentation": "tab",
-      "string-quotes": "single",
-      "no-duplicate-selectors": true,
-      "color-hex-case": "lower",
-      "color-hex-length": "short",
-      "color-named": "always-where-possible",
-      "selector-no-qualifying-type": [
-        true,
-        {
-          "ignore": [
-            "attribute"
-          ]
-        }
-      ],
-      "selector-combinator-space-after": "always",
-      "selector-attribute-quotes": "always",
-      "selector-attribute-operator-space-before": "never",
-      "selector-attribute-operator-space-after": "never",
-      "selector-attribute-brackets-space-inside": "never",
-      "declaration-block-trailing-semicolon": "always",
-      "declaration-no-important": true,
-      "declaration-colon-space-before": "never",
-      "declaration-colon-space-after": "always",
-      "property-no-vendor-prefix": true,
-      "value-no-vendor-prefix": true,
-      "number-leading-zero": "never",
-      "font-family-name-quotes": "always-unless-keyword",
-      "comment-whitespace-inside": "always",
-      "at-rule-no-vendor-prefix": true,
-      "selector-pseudo-element-colon-notation": "single",
-      "selector-pseudo-class-parentheses-space-inside": "never",
-      "selector-no-vendor-prefix": true,
-      "media-feature-range-operator-space-before": "always",
-      "media-feature-range-operator-space-after": "always",
-      "media-feature-parentheses-space-inside": "never",
-      "media-feature-name-no-vendor-prefix": true,
-      "media-feature-colon-space-before": "never",
-      "media-feature-colon-space-after": "always"
-    }
+    "sass": "^1.42.1"
   }
 }
